--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,24 @@
+/**
+	backgroundColor: '#faf5e4',
+	color: '#004445',
+	accentedColor: '#f8b400',
+	errorColor: '#dd3322'
+	**/
+
 body {
 	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+	font-family: 'Dosis', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+		'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
 		sans-serif;
-	background-color: burlywood;
+	background-color: #faf5e4;
+	color: #004445;
 }
 
-code {
-	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-		monospace;
+a {
+	text-decoration: none;
+	color: #004445;
+}
+
+a:hover {
+	color: #f8b400;
 }
