--- a/src/index.css
+++ b/src/index.css
@@ -1,24 +1,22 @@
-/**
-	backgroundColor: '#faf5e4',
-	color: '#004445',
-	accentedColor: '#f8b400',
-	errorColor: '#dd3322'
-	**/
-
 body {
-	margin: 0;
-	font-family: 'Dosis', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
-		'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-		sans-serif;
-	background-color: #faf5e4;
-	color: #004445;
+  margin: 0;
+  font-family: 'Dosis', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+    'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    'Arial', sans-serif;
+  background-color: #e9a401;
+  color: #053505;
 }
-
+h1 {
+  font-family: PatrickHandSC;
+}
+img {
+  padding: 10px;
+}
 a {
-	text-decoration: none;
-	color: #004445;
+  text-decoration: none;
+  color: #053505;
 }
 
 a:hover {
-	color: #f8b400;
+  color: #999999;
 }
